[package]
name = "up-api"
version = "0.1.1"
edition = "2021"
description = "A convenient and easy to use wrapper for the Up Bank API."
license = "MIT OR Apache-2.0"
authors = ["Aaron Manning"]
repository = "https://github.com/aaron-jack-manning/up-api"

[dependencies]
reqwest = "0.11.11"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
